# enma-lsp-zed

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.sh  extension.toml  extension.wasm
.github/workflows/: release.yml
editors/helix/: .gitignore  install.ps1  install.sh  languages.toml
editors/nvim/: .gitignore  install.ps1  install.sh
editors/vscode/: .gitignore  .vscodeignore  build.mjs  language-configuration.json  package.json  tsconfig.json
enma-lsp/: COMMANDS.md  Cargo.toml  build.rs  test-lsp
enma-lsp/src/: bundler.rs  cli.rs  completion.rs  formatting.rs  hover.rs  main.rs  parser.rs  semantic.rs  type_db.rs  types.json
examples/: aim_trainer.em  enma_mi_test.em  perception.em.predefined  test_all_apis.em  test_collections_api.em  test_cpu_api.em  test_filesystem_api.em  test_global_dot.em  test_global_ps.em  test_gui_api.em  test_input_api.em  test_list_api.em  test_math_api.em  test_net_api.em  test_pointer_semantics.em  test_proc_api.em  test_proc_leak.em  test_proc_min.em  test_sound_api.em  test_unicorn_api.em  test_vector_api.em  test_win_api.em  test_zydis_api.em
examples/import-test/: main.em
examples/pcxcraft/: main.em
grammars/: enma.wasm
grammars/enma/: grammar.js  package.json
languages/enma/: brackets.scm  (+4 more)
snippets/: enma.json  stdlib.json
src/: lib.rs
test/: cpu_api.em  lifecycle_routines.em  output.em  sound_api.em  unicorn_api.em  zydis_api.em
tree-sitter-enma/: .gitignore  Cargo.toml  Package.json  binding.gyp  build.rs  grammar.js  package-lock.json  package.json  tree-sitter-enma.wasm  tree-sitter.json
(+63 files in other folders)
