[package]
name = "enma-lsp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "enma-lsp"
path = "src/main.rs"

[build-dependencies]
cc = "1"

[dependencies]
tree-sitter = "0.24"
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "6"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 2
